# sp500-signal-classifier

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  params.yaml  pyproject.toml
scripts/: test.py
src/: config.py
src/data/: fetch.py
src/sp500_signal_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sp500_signal_classifier/data/: clean.py  fetch.py
src/sp500_signal_classifier/features/: returns.py  trend.py  volatility.py
tests/: test_clean.py  test_fetch.py  test_returns.py  test_trend.py  test_volatility.py
