[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-signal-classifier"
version = "0.1.0"
description = "Predictive signal modeling for SP500 ETF daily returns (long/flat strategy)."
authors = [
  { name = "Sebastian Morel-Balbi", email = "sebastian.morel@gmail.com" }
  ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "scipy",
  "pyyaml",
  "python-dateutil",
  "yfinance",
  "ta"
]

[project.optional-dependencies]
dev = ["black", "isort", "pre-commit", "pytest"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sp500_signal_classifier*"]
